# ai-sandbox

./: .gitignore  Makefile  OWNERS  OWNERS_ALIASES  pyproject.toml
rds-policy/: .gitignore
rds-policy/docs/: EVAL.md
rds-policy/evals/: EVAL-GUIDE.md  Makefile  hooks.js  promptfooconfig.yaml
rds-policy/evals/assertions/: common.py  merge.py  safety.py  structural.py  workflow.py
rds-policy/evals/fixtures/partner-comprehensive/: acme-config-v4-18.yaml  acme-ran-v4-18.yaml
rds-policy/evals/fixtures/partner-comprehensive/custom-crs/: AcmePtpConfig.yaml
rds-policy/evals/fixtures/partner-cr-replication/: acme-v4-18.yaml
rds-policy/evals/fixtures/partner-merge/: acme-v4-18.yaml
rds-policy/evals/fixtures/partner-merge/custom-crs/: AcmeMonitoring.yaml
rds-policy/evals/fixtures/partner-multi-pg/: acme-config-v4-18.yaml  acme-ran-v4-18.yaml
rds-policy/evals/fixtures/partner-mustnothave/: acme-cluster-baseline.yaml
rds-policy/evals/fixtures/partner-required-cr/: acme-v4-18.yaml
rds-policy/evals/fixtures/ref-4.18/acmpolicygenerator/: acm-group-du-sno-ranGen.yaml
rds-policy/evals/fixtures/ref-4.18/source-crs/: ConsoleOperatorDisable.yaml  NMStateOperator.yaml  PtpConfigBoundary.yaml  PtpConfigSlave.yaml  SriovFecClusterConfig.yaml  StorageLV.yaml  SubscriptionOCP.yaml
rds-policy/evals/fixtures/ref-4.20/acmpolicygenerator/: acm-group-du-sno-ranGen.yaml
rds-policy/evals/fixtures/ref-4.20/source-crs/: ConsoleOperatorDisable.yaml  PtpConfigBoundary.yaml  (+4 more)
rds-policy/evals/graders/: judge-prompt.txt
rds-policy/rds_agent/skills/rds-policy-update/: SKILL.md
(+4 files in other folders)
