[project]
name = "ai-sandbox"
version = "0.1.0"
description = "Sandbox for AI related proofs-of-concept"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jmespath>=1.1.0",
]

[tool.ruff]
target-version = "py313"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
